syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "io/aggregator/entity/transaction_merchant_key.proto";

package io.aggregator.entity;

option java_outer_classname = "MinuteEntity";

message MinuteCreated {
  MerchantKey merchant_key = 1;
  int64 epoch_minute = 2;
}

message SecondAdded {
  MerchantKey merchant_key = 1;
  int64 epoch_second = 2;
}

message MinuteAggregated {
  MerchantKey merchant_key = 1;
  int64 epoch_minute = 2;
  double transaction_total_amount = 3;
  int32 transaction_count = 4;
  google.protobuf.Timestamp last_update_timestamp = 5;
  google.protobuf.Timestamp aggregate_request_timestamp = 6;
  string payment_id = 7;
}

message ActiveSecondAggregated {
  MerchantKey merchant_key = 1;
  int64 epoch_second = 2;
  double transaction_total_amount = 3;
  int32 transaction_count = 4;
  google.protobuf.Timestamp last_update_timestamp = 5;
  google.protobuf.Timestamp aggregate_request_timestamp = 6;
  string payment_id = 7;
}

message MinuteAggregationRequested {
  MerchantKey merchant_key = 1;
  int64 epoch_minute = 2;
  repeated int64 epoch_seconds = 3;
  google.protobuf.Timestamp aggregate_request_timestamp = 6;
  string payment_id = 7;
}

message MinuteState {
  MerchantKey merchant_key = 1;
  int64 epoch_minute = 2;
  int64 epoch_hour = 3;
  int64 epoch_day = 4;
  repeated ActiveSecond activeSeconds = 5;
  repeated AggregateMinute aggregateMinutes = 6;
  google.protobuf.Timestamp last_update_timestamp = 7;
}

message AggregateMinute {
  repeated ActiveSecond activeSeconds = 1;
  google.protobuf.Timestamp aggregate_request_timestamp = 2;
  string payment_id = 3;
}

message ActiveSecond {
  int64 epoch_second = 1;
  double transaction_total_amount = 2;
  int32 transaction_count = 3;
  google.protobuf.Timestamp last_update_timestamp = 4;
  google.protobuf.Timestamp aggregate_request_timestamp = 5;
  string payment_id = 6;
}
